[gd_scene load_steps=3 format=3 uid="uid://0boakbawrrm"]

[ext_resource type="Script" uid="uid://doa7qqpr4npr8" path="res://Scripts/login.gd" id="1_5cd0j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hbxdl"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5cd0j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProfileList" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_hbxdl")

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_hbxdl")

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"
alignment = 1

[node name="CreateButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create"

[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
